--- a/answers.properties
+++ b/answers.properties
@@ -1,9 +1,9 @@
 admin-email = root@localhost
 ssl-set-org = Spacewalk Org
 ssl-set-org-unit = spacewalk
-ssl-set-city = My City
-ssl-set-state = My State
-ssl-set-country = US
+ssl-set-city = Paris
+ssl-set-state = Ile de France
+ssl-set-country = FR
 ssl-password = spacewalk
 ssl-set-email = root@localhost
 ssl-config-sslvhost = Y
